validation users + doc
